# robot

./: .gitignore  .report_command.cpp.swp  CMakeLists.txt  IressProjectRequires.yml  Readme.md  command.h  conanfile.py  direction.cpp  direction.h  grid.cpp  grid.h  main.cpp  move_command.h  place_command.h  position.cpp  position.h  report_command.cpp  report_command.h  robot.cpp  robot.h  rotate_command.h  rotation.h
src/: CMakeLists.txt  command.h  coordinates.cpp  coordinates.h  direction.cpp  direction.h  grid.cpp  grid.h  main.cpp  move_command.cpp  move_command.h  parser.cpp  parser.h  place_command.cpp  place_command.h  position.cpp  position.h  report_command.cpp  report_command.h  robot.cpp  robot.h  rotate_command.cpp  rotate_command.h  rotation.h
test/: CMakeLists.txt  main.cpp  test_coordinates.cpp  test_direction.cpp  test_grid.cpp  test_move_command.cpp  test_parser.cpp  test_place_command.cpp  test_position.cpp  test_report_command.cpp  test_rotate_command.cpp  test_rotation.cpp
test_header_only/: CMakeLists.txt  main.cpp
